--- a/src/components/Timer/timer.css
+++ b/src/components/Timer/timer.css
@@ -1,7 +1,7 @@
 .timer-container{
     border: 2px solid black;
-    width: 50%;
-    margin: 20% auto;
+    width: 40%;
+    margin: 10% auto;
     padding: 1rem;
     border-radius: 2rem;
     background: #007991;
@@ -67,3 +67,28 @@
     transition: 300ms;
     transform: scale(1.2);
 }
+
+@media screen and (max-width: 600px) {
+    .timer-controls{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .number{
+        text-align: center;
+        font-size: 3rem;
+        color: antiquewhite;
+    }
+
+    .btn{
+        font-size: 1.2rem;
+        margin-bottom: 10%;
+        padding: .2rem;
+        border: none;
+        border-radius: .4rem;
+        padding: .4rem;
+        color: antiquewhite;
+    }
+  }
